--- a/SiteIA/contato.html
+++ b/SiteIA/contato.html
@@ -35,37 +35,36 @@
     <main>
         <section id="contato">
             <h1>Contato</h1>
-            <form action="">
-                <label for="nomec">Nome Completo:</label><br>
-                <input type="text" id="nomec" name="nomec" value=""><br><br>
-                <label for="emailp">Email:</label><br>
-                <input type="email" id="emailp" name="emailp" value=""><br><br>
-                <label for="datanasc">Data de nascimento:</label><br>
-                <input type="date" id="datanasc" name="datanasc"><br><br>
-                <label for="membrofav">Qual o seu membro favorito dos Nirvana?</label><br>
-                <select name="membrofav" id="membrofav">
-                    <option value="Kurt">Kurt Cobain</option>
-                    <option value="Krist">Krist Novoselic</option>
-                    <option value="Dave">Dave Grohl</option>
-                </select><br><br>
-                <label for="instrumento">Qual seu instrumento que gosta?</label><br>
-                <input type="radio" id="baixo" name="instrumento" value="Baixo">
-                <label for="baixo">Baixo</label><br>
-                <input type="radio" id="guitarrah" name="instrumento" value="Guitarra harmônica">
-                <label for="guitarrah">Guitarra harmônica</label><br>
-                <input type="radio" id="guitarrap" name="instrumento" value="Guitarra principal">
-                <label for="guitarrap">Guitarra principal</label><br>
-                <input type="radio" id="bateria" name="instrumento" value="Bateria">
-                <label for="bateria">Bateria</label><br><br>
-                <label for="genero">Gênero:</label><br>
-                <input list="genero">
-                <datalist id="genero">
-                    <option value="Masculino">
-                    <option value="Feminino">
-                </datalist><br><br>
-                <label>Escreva um comentário sobre a banda Nirvana:</label><br>
-                <textarea name="mensagem" id="mensagem" rows="10" cols="30"></textarea>
-            </form>
+            <div class="container-form">
+                <form class="formulario-contato" action="https://formsubmit.co/rafita.limagames2@gmail.com" method="post">
+                    <label for="nomec">Nome completo:</label><br>
+                    <input type="text" id="nomec" name="nomec" value=""><br><br>
+                    <label for="emailp">Email:</label><br>
+                    <input type="email" id="emailp" name="emailp" value=""><br><br>
+                    <label for="datanasc">Data de nascimento:</label><br>
+                    <input type="date" id="datanasc" name="datanasc"><br><br>
+                    <label for="membrofav">Qual o seu membro favorito do Nirvana?</label><br>
+                    <select name="membrofav" id="membrofav">
+                        <option value="Kurt">Kurt Cobain</option>
+                        <option value="Krist">Krist Novoselic</option>
+                        <option value="Dave">Dave Grohl</option>
+                    </select><br><br>
+                    <label for="instrumento">Qual seu instrumento que gosta?</label><br>
+                    <input type="radio" id="baixo" name="instrumento" value="Baixo"> Baixo<br>
+                    <input type="radio" id="guitarrah" name="instrumento" value="Guitarra harmônica"> Guitarra harmônica <br>
+                    <input type="radio" id="guitarrap" name="instrumento" value="Guitarra principal"> Guitarra principal <br>
+                    <input type="radio" id="bateria" name="instrumento" value="Bateria"> Bateria <br><br>
+                    <label for="genero">Gênero:</label><br>
+                    <input list="genero">
+                    <datalist id="genero">
+                        <option value="Masculino">
+                        <option value="Feminino">
+                    </datalist><br><br>
+                    <label>Escreva um comentário sobre a banda Nirvana:</label><br>
+                    <textarea name="mensagem" id="mensagem" rows="10" cols="30"></textarea><br><br>
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
         </section>
     </main>
     <footer>
