--- a/SiteIA/index.html
+++ b/SiteIA/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#compositores">Compositores</a></li>
                     <li><a href="#curiosidades">Curiosidades</a></li>
                     <li><a href="#albuns">Álbuns</a></li>
-                    <li><a href="/SiteIA/contato.html">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
