--- a/SiteIA/contato.html
+++ b/SiteIA/contato.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="/SiteIA/index.html">Logo</a>
+                <a href="/SiteIA/index.html"><img src="/SiteIA/img/NirvanaLogo.png" alt="Logo do Nirvana de amarelo"></a>
             </div>
             <nav>
                 <ul>
@@ -36,7 +36,7 @@
         <section id="contato">
             <h1>Contato</h1>
             <div class="container-form">
-                <form class="formulario-contato" action="https://formsubmit.co/rafita.limagames2@gmail.com" method="POST">
+                <form class="formulario-contato" action="https://formsubmit.co/rafita.limagames@gmail.com" method="POST">
                     <div class="nome-container">
                         <label for="Nome completo">Nome completo:</label><br>
                         <input type="text" id="Nome completo" name="Nome completo" value="">
