--- a/SiteNirvana/contato.html
+++ b/SiteNirvana/contato.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="/SiteNirvana/index.html"><img src="/SiteIA/img/NirvanaLogo.png" alt="Logo do Nirvana de amarelo"></a>
+                <a href="/SiteNirvana/index.html"><img src="/SiteIA/img/NirvanaLogo.png" alt="Logo do Nirvana em amarelo"></a>
             </div>
             <nav>
                 <ul>
@@ -65,7 +65,7 @@
                         <input type="radio" id="bateria" name="instrumento" value="Bateria"> Bateria
                     </div>
                     <div class="genero-container">
-                        <label for="genero">Gênero:</label><br>
+                        <label for="Genero">Gênero:</label><br>
                         <input list="Genero">
                         <datalist id="Genero">
                             <option value="Masculino">
