--- a/SiteNirvana/index.html
+++ b/SiteNirvana/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="/SiteNirvana/index.html"><img src="/SiteIA/img/NirvanaLogo.png" alt="Logo do Nirvana em amarelo"></a>
+                <a href="/SiteNirvana/index.html"><img src="/SiteNirvana/img/NirvanaLogo.png" alt="Logo do Nirvana em amarelo"></a>
             </div>
             <nav>
                 <ul>
