--- a/enviadocomsuceso.html
+++ b/enviadocomsuceso.html
@@ -14,16 +14,16 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="/SiteNirvana/index.html"><img src="/SiteNirvana/img/NirvanaLogo.png" alt="Logo do Nirvana em amarelo"></a>
+                <a href="/index.html"><img src="/img/NirvanaLogo.png" alt="Logo do Nirvana em amarelo"></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/SiteNirvana/index.html#introducao">Introdução</a></li>
-                    <li><a href="/SiteNirvana/index.html#sobre">Sobre</a></li>
-                    <li><a href="/SiteNirvana/index.html#compositores">Compositores</a></li>
-                    <li><a href="/SiteNirvana/index.html#curiosidades">Curiosidades</a></li>
-                    <li><a href="/SiteNirvana/index.html#albuns">Álbuns</a></li>
-                    <li><a href="/SiteNirvana/contato.html">Contato</a></li>
+                    <li><a href="/index.html#introducao">Introdução</a></li>
+                    <li><a href="/index.html#sobre">Sobre</a></li>
+                    <li><a href="/index.html#compositores">Compositores</a></li>
+                    <li><a href="/index.html#curiosidades">Curiosidades</a></li>
+                    <li><a href="/index.html#albuns">Álbuns</a></li>
+                    <li><a href="/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
